# btoon-python

./: .gitignore  .gitmodules  MANIFEST.in  Makefile  README.md  RELEASE.md  pyproject.toml  setup.py  simple_test.py  test_comprehensive.py
.github/workflows/: publish.yml  test.yml
btoon/: __init__.py
scripts/: git-commit-and-push.sh  git-pull.sh  git-update.sh  release.sh
test_wheel/: btoon-0.0.1-cp310-cp310-macosx_15_0_arm64.whl
