[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "btoon"
version = "0.0.1"
description = "High-performance binary serialization format for Python"
readme = "README.md"
authors = [
    {name = "BTOON Contributors", email = "hello@btoon.net"}
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-benchmark",
    "black",
    "flake8",
    "mypy",
    "build",
    "twine",
]
numpy = [
    "numpy>=1.19.0",
]
pandas = [
    "pandas>=1.2.0",
    "numpy>=1.19.0",
]
full = [
    "numpy>=1.19.0",
    "pandas>=1.2.0",
    "aiofiles>=0.8.0",
]

[project.urls]
Homepage = "https://btoon.net"
Documentation = "https://btoon.net/docs"
Repository = "https://github.com/BTOON-project/btoon-python"
Issues = "https://github.com/BTOON-project/btoon-python/issues"

[tool.setuptools]
packages = ["btoon"]
include-package-data = true

[tool.setuptools.package-data]
btoon = ["*.pyi", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["btoon"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
